More responsive design, trying to fix font size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,23 +81,21 @@ h1 {
 h2 {
     font-size: 1.3em;
 }
+section > section {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
+}
 @media only screen and (max-width: 767px) {
-    section > section {
-        display: block;
-        width: 100%;
-    }
     .detail {
         width: 100%;
     }
     .pattern {
-        float: left;
-        display: inline-block;
-        height: 130px;
+        min-height: 130px;
         width: 40%;
     }
     .confirmation {
-        display: inline-block;
-        clear: both;
         margin-left: 16px;
         width: 30%;
         font-size: x-large;
@@ -106,22 +104,14 @@ h2 {
 }
 
 @media only screen and (max-device-width: 511px) {
-    section > section {
-        display: block;
-        width: 100%;
-    }
     .detail {
         width: 100%;
     }
     .pattern {
-        float: left;
-        display: inline-block;
-        height: 130px;
+        min-height: 130px;
         width: 40%;
     }
     .confirmation {
-        display: inline-block;
-        clear: both;
         margin-left: 16px;
         width: 30%;
         font-size: x-large;
@@ -130,13 +120,6 @@ h2 {
 }
 
 @media only screen and (min-width: 768px) and (min-device-width: 512px) {
-    section > section {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: space-between;
-    }
-
     .detail {
         width: 40%;
     }
